test/tests/stages/8_loops/invalid_parse/extra_credit/switch_missing_paren.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  const int(3)
  {
  case
  const int(3)
  :
  return
  const int(0)
  ;
  }
  }
